// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Beneficiaries Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "additional_street": null,
      "address": "1, somewhere av.
12340 Megacity",
      "administrative_area": null,
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "company_id": 1,
      "country": /* Country Instance => */ "FR",
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "is_deleted": false,
      "is_invoiceable": true,
      "language": "en",
      "last_name": "Fountain",
      "locality": "Megacity",
      "note": null,
      "phone": null,
      "postal_code": "12340",
      "reference": "0001",
      "street": "1, somewhere av.",
      "user_id": 1,
    },
    {
      "additional_street": null,
      "address": null,
      "administrative_area": null,
      "company": null,
      "company_id": null,
      "country": /* Country Instance => */ "FR",
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "is_deleted": false,
      "is_invoiceable": true,
      "language": "en",
      "last_name": "Rabbit",
      "locality": null,
      "note": null,
      "phone": null,
      "postal_code": null,
      "reference": "0002",
      "street": null,
      "user_id": 2,
    },
    {
      "additional_street": "Étage 3, Porte 2",
      "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
      "administrative_area": null,
      "company": null,
      "company_id": null,
      "country": /* Country Instance => */ "FR",
      "email": "elise@loxya.fr",
      "first_name": "Élise",
      "full_name": "Élise Faure",
      "id": 3,
      "is_deleted": false,
      "is_invoiceable": true,
      "language": null,
      "last_name": "Faure",
      "locality": "Wazzaville",
      "note": null,
      "phone": /* Phone Instance => */ "+33123456789",
      "postal_code": "88080",
      "reference": "0003",
      "street": "156 bis, avenue des tests poussés",
      "user_id": null,
    },
    {
      "additional_street": null,
      "address": "47 W 13th St
New York, NY 10011",
      "administrative_area": "NY",
      "company": null,
      "company_id": null,
      "country": /* Country Instance => */ "US",
      "email": "john@doe.test",
      "first_name": "John",
      "full_name": "John Doe",
      "id": 4,
      "is_deleted": false,
      "is_invoiceable": true,
      "language": null,
      "last_name": "Doe",
      "locality": "New York",
      "note": null,
      "phone": /* Phone Instance => */ "+17705555765",
      "postal_code": "10011",
      "reference": "0004",
      "street": "47 W 13th St",
      "user_id": null,
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 4,
    "total": {
      "items": 4,
      "pages": 1,
    },
  },
}
`;

exports[`Beneficiaries Api bookings() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "additional_street": null,
          "address": "1, somewhere av.
12340 Megacity",
          "administrative_area": null,
          "company": {
            "additional_street": "Bâtiment D",
            "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
            "administrative_area": null,
            "country": /* Country Instance => */ "FR",
            "id": 1,
            "invoice_identifier": "0225:123456789_LOCATION",
            "is_public_entity": false,
            "legal_name": "Testing, Inc",
            "locality": "Annecy",
            "note": "Anciennement Machin, Inc.",
            "phone": /* Phone Instance => */ "+33123456789",
            "postal_code": "74000",
            "registration_id": "12345678900001",
            "service_code": null,
            "street": "10 avenue de la gare",
            "vat_number": "FR32123456789",
          },
          "company_id": 1,
          "country": /* Country Instance => */ "FR",
          "email": "tester@loxya.com",
          "first_name": "Jean",
          "full_name": "Jean Fountain",
          "id": 1,
          "is_deleted": false,
          "is_invoiceable": true,
          "language": "en",
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "12340",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": false,
      "has_unassigned_mandatory_positions": false,
      "id": 1,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Gap",
      "manager": {
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "group": "operation",
        "id": 2,
        "last_name": "Rabbit",
        "phone": null,
        "pseudo": "test2",
      },
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-19 00:00:00",
        "isFullDays": false,
        "start": "2018-12-16 15:45:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-18 18:00:00",
        "isFullDays": false,
        "start": "2018-12-17 10:00:00",
      },
      "parks": [
        1,
      ],
      "return_inventory_datetime": null,
      "technicians": [
        {
          "event_id": 1,
          "id": 1,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 22:00:00",
            "isFullDays": false,
            "start": "2018-12-17 09:00:00",
          },
          "role": {
            "id": 1,
            "is_used": true,
            "name": "Régisseur",
          },
          "technician": {
            "additional_street": null,
            "address": null,
            "administrative_area": null,
            "country": /* Country Instance => */ "FR",
            "email": "tester2@loxya.com",
            "first_name": "Roger",
            "full_name": "Roger Rabbit",
            "id": 1,
            "last_name": "Rabbit",
            "locality": null,
            "nickname": "Riri",
            "note": null,
            "phone": null,
            "postal_code": null,
            "roles": [
              {
                "id": 1,
                "is_used": true,
                "name": "Régisseur",
              },
              {
                "id": 3,
                "is_used": true,
                "name": "Ingénieur du son",
              },
            ],
            "street": null,
          },
          "technician_id": 1,
        },
        {
          "event_id": 1,
          "id": 2,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 18:00:00",
            "isFullDays": false,
            "start": "2018-12-18 14:00:00",
          },
          "role": {
            "id": 2,
            "is_used": true,
            "name": "Technicien plateau",
          },
          "technician": {
            "additional_street": null,
            "address": null,
            "administrative_area": null,
            "country": /* Country Instance => */ "CH",
            "email": "jg@loxya.fr",
            "first_name": "Jean",
            "full_name": "Jean Garcia",
            "id": 2,
            "last_name": "Garcia",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": /* Phone Instance => */ "+33645698520",
            "postal_code": null,
            "roles": [
              {
                "id": 2,
                "is_used": true,
                "name": "Technicien plateau",
              },
            ],
            "street": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Premier événement",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "additional_street": "Étage 3, Porte 2",
          "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
          "administrative_area": null,
          "company": null,
          "company_id": null,
          "country": /* Country Instance => */ "FR",
          "email": "elise@loxya.fr",
          "first_name": "Élise",
          "full_name": "Élise Faure",
          "id": 3,
          "is_deleted": false,
          "is_invoiceable": true,
          "language": null,
          "last_name": "Faure",
          "locality": "Wazzaville",
          "note": null,
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "88080",
          "reference": "0003",
          "street": "156 bis, avenue des tests poussés",
          "user_id": null,
        },
      ],
      "categories": [
        1,
      ],
      "color": /* Color Instance => */ "#ffba49",
      "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": true,
      "has_unassigned_mandatory_positions": true,
      "id": 2,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": true,
      "location": "Lyon",
      "manager": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-20 00:00:00",
        "isFullDays": false,
        "start": "2018-12-18 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-19",
        "isFullDays": true,
        "start": "2018-12-18",
      },
      "parks": [
        1,
      ],
      "return_inventory_datetime": /* DateTime Instance => */ "2018-12-20 14:30:00",
      "technicians": [],
      "title": "Second événement",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": null,
      "id": 3,
      "is_archived": true,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Brousse",
      "manager": null,
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-16 15:45:00",
        "isFullDays": false,
        "start": "2018-12-15 08:30:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-17 00:00:00",
        "isFullDays": false,
        "start": "2018-12-15 09:00:00",
      },
      "parks": [
        1,
      ],
      "return_inventory_datetime": /* DateTime Instance => */ "2018-12-16 15:42:00",
      "technicians": [],
      "title": "Avant-premier événement",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        3,
      ],
      "color": /* Color Instance => */ "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 4,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Moon",
      "manager": null,
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-11 00:00:00",
        "isFullDays": false,
        "start": "2019-03-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-10",
        "isFullDays": true,
        "start": "2019-03-01",
      },
      "parks": [
        1,
        2,
      ],
      "return_inventory_datetime": null,
      "technicians": [],
      "title": "Concert X",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [
        {
          "additional_street": null,
          "address": "1, somewhere av.
12340 Megacity",
          "administrative_area": null,
          "company": {
            "additional_street": "Bâtiment D",
            "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
            "administrative_area": null,
            "country": /* Country Instance => */ "FR",
            "id": 1,
            "invoice_identifier": "0225:123456789_LOCATION",
            "is_public_entity": false,
            "legal_name": "Testing, Inc",
            "locality": "Annecy",
            "note": "Anciennement Machin, Inc.",
            "phone": /* Phone Instance => */ "+33123456789",
            "postal_code": "74000",
            "registration_id": "12345678900001",
            "service_code": null,
            "street": "10 avenue de la gare",
            "vat_number": "FR32123456789",
          },
          "company_id": 1,
          "country": /* Country Instance => */ "FR",
          "email": "tester@loxya.com",
          "first_name": "Jean",
          "full_name": "Jean Fountain",
          "id": 1,
          "is_deleted": false,
          "is_invoiceable": true,
          "language": "en",
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "12340",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        4,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 5,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Saint-Jean-la-Forêt",
      "manager": null,
      "mobilization_period": /* Period Instance => */ {
        "end": "2020-01-02 00:00:00",
        "isFullDays": false,
        "start": "2020-01-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2020-01-01",
        "isFullDays": true,
        "start": "2020-01-01",
      },
      "parks": [
        1,
      ],
      "return_inventory_datetime": null,
      "technicians": [],
      "title": "Kermesse de l'école des trois cailloux",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [],
      "color": /* Color Instance => */ "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
      "entity": "event",
      "has_materials": false,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 6,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "La Clusaz",
      "manager": null,
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-02 00:00:00",
        "isFullDays": false,
        "start": "2019-03-15 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-01",
        "isFullDays": true,
        "start": "2019-03-15",
      },
      "parks": [],
      "return_inventory_datetime": null,
      "technicians": [],
      "title": "Un événement sans inspiration",
    },
    {
      "author": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "beneficiaries": [],
      "categories": [
        1,
        2,
        3,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
      "entity": "event",
      "has_materials": true,
      "has_not_returned_materials": null,
      "has_unassigned_mandatory_positions": false,
      "id": 7,
      "is_archived": false,
      "is_confirmed": true,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Machin-le-chateau",
      "manager": {
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "group": "administration",
        "id": 1,
        "last_name": "Fountain",
        "phone": null,
        "pseudo": "test1",
      },
      "mobilization_period": /* Period Instance => */ {
        "end": "2023-05-29 00:00:00",
        "isFullDays": false,
        "start": "2023-05-25 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2023-05-28",
        "isFullDays": true,
        "start": "2023-05-25",
      },
      "parks": [
        1,
        2,
      ],
      "return_inventory_datetime": null,
      "technicians": [
        {
          "event_id": 7,
          "id": 3,
          "period": /* Period Instance => */ {
            "end": "2023-05-29 00:00:00",
            "isFullDays": false,
            "start": "2023-05-25 00:00:00",
          },
          "role": {
            "id": 3,
            "is_used": true,
            "name": "Ingénieur du son",
          },
          "technician": {
            "additional_street": null,
            "address": null,
            "administrative_area": null,
            "country": /* Country Instance => */ "CH",
            "email": "jg@loxya.fr",
            "first_name": "Jean",
            "full_name": "Jean Garcia",
            "id": 2,
            "last_name": "Garcia",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": /* Phone Instance => */ "+33645698520",
            "postal_code": null,
            "roles": [
              {
                "id": 2,
                "is_used": true,
                "name": "Technicien plateau",
              },
            ],
            "street": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Médiévales de Machin-le-chateau 2023",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 7,
    "total": {
      "items": 7,
      "pages": 1,
    },
  },
}
`;

exports[`Beneficiaries Api create() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "company": {
    "additional_street": "Bâtiment D",
    "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
    "administrative_area": null,
    "country": /* Country Instance => */ "FR",
    "id": 1,
    "invoice_identifier": "0225:123456789_LOCATION",
    "is_public_entity": false,
    "legal_name": "Testing, Inc",
    "locality": "Annecy",
    "note": "Anciennement Machin, Inc.",
    "phone": /* Phone Instance => */ "+33123456789",
    "postal_code": "74000",
    "registration_id": "12345678900001",
    "service_code": null,
    "street": "10 avenue de la gare",
    "vat_number": "FR32123456789",
  },
  "company_id": 1,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "id": 1,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "note": null,
  "phone": null,
  "postal_code": "12340",
  "reference": "0001",
  "stats": {
    "borrowings": 2,
  },
  "street": "1, somewhere av.",
  "user": {
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "administration",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "user_id": 1,
}
`;

exports[`Beneficiaries Api create() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "id": 2,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Rabbit",
  "locality": null,
  "note": null,
  "phone": null,
  "postal_code": null,
  "reference": "0002",
  "stats": {
    "borrowings": 2,
  },
  "street": null,
  "user": {
    "email": "tester2@loxya.com",
    "first_name": "Roger",
    "full_name": "Roger Rabbit",
    "group": "operation",
    "id": 2,
    "last_name": "Rabbit",
    "phone": null,
    "pseudo": "test2",
  },
  "user_id": 2,
}
`;

exports[`Beneficiaries Api create() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": "Étage 3, Porte 2",
  "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "elise@loxya.fr",
  "first_name": "Élise",
  "full_name": "Élise Faure",
  "id": 3,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Faure",
  "locality": "Wazzaville",
  "note": null,
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "88080",
  "reference": "0003",
  "stats": {
    "borrowings": 1,
  },
  "street": "156 bis, avenue des tests poussés",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api create() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": "47 W 13th St
New York, NY 10011",
  "administrative_area": "NY",
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "US",
  "email": "john@doe.test",
  "first_name": "John",
  "full_name": "John Doe",
  "id": 4,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Doe",
  "locality": "New York",
  "note": null,
  "phone": /* Phone Instance => */ "+17705555765",
  "postal_code": "10011",
  "reference": "0004",
  "stats": {
    "borrowings": 0,
  },
  "street": "47 W 13th St",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api estimates() parse the returned data correctly 1`] = `
[
  {
    "buyer": {
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "reference": "0001",
    },
    "created_at": /* DateTime Instance => */ "2021-01-30 14:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
    "due_date": null,
    "due_delay": 30,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "has_final_invoice": false,
    "id": 1,
    "lang": "en",
    "number": "D-2021-00001",
    "related_invoices": [
      {
        "created_at": /* DateTime Instance => */ "2021-02-15 10:00:00",
        "currency": /* Currency Instance => */ "EUR",
        "date": /* DateTime Instance => */ "2021-02-15 10:00:00",
        "format": 3,
        "global_tax_exemption_code": null,
        "global_tax_exemption_reason": null,
        "global_tax_regime": null,
        "id": 5,
        "is_cancelled": false,
        "is_credit_note": false,
        "is_overdue": true,
        "is_prepayment": true,
        "number": "2021-00002",
        "status": "pending",
        "total_taxes": [
          {
            "base": /* Decimal Instance => */ "82.96",
            "total": /* Decimal Instance => */ "16.59",
            "type": "S",
            "value": /* Decimal Instance => */ "20",
          },
          {
            "base": /* Decimal Instance => */ "0.43",
            "total": /* Decimal Instance => */ "0.02",
            "type": "S",
            "value": /* Decimal Instance => */ "5.5",
          },
        ],
        "total_with_taxes": /* Decimal Instance => */ "100",
        "total_without_taxes": /* Decimal Instance => */ "83.39",
        "url": {
          "pdf": "http://loxya.test/invoices/5/pdf",
          "ubl": "http://loxya.test/invoices/5/ubl",
        },
      },
    ],
    "status": "accepted",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "882.07",
        "total": /* Decimal Instance => */ "176.41",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
      {
        "base": /* Decimal Instance => */ "4.57",
        "total": /* Decimal Instance => */ "0.25",
        "type": "S",
        "value": /* Decimal Instance => */ "5.5",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "1063.3",
    "total_without_taxes": /* Decimal Instance => */ "886.64",
    "url": "http://loxya.test/estimates/1/pdf",
  },
  {
    "buyer": {
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "reference": "0001",
    },
    "created_at": /* DateTime Instance => */ "2022-06-14 22:48:20",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2022-06-14 22:48:20",
    "due_date": /* Day Instance => */ "2022-06-20",
    "due_delay": null,
    "format": 1,
    "global_tax_exemption_code": "VATEX-FR-FRANCHISE",
    "global_tax_exemption_reason": null,
    "global_tax_regime": "E",
    "has_final_invoice": false,
    "id": 2,
    "lang": "fr",
    "related_invoices": [],
    "status": "sent",
    "total_taxes": [],
    "total_with_taxes": /* Decimal Instance => */ "660.34",
    "total_without_taxes": /* Decimal Instance => */ "550.28",
    "url": "http://loxya.test/estimates/2/pdf",
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "created_at": /* DateTime Instance => */ "2026-04-15 09:30:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2026-04-15 09:30:00",
    "due_date": null,
    "due_delay": 30,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "has_final_invoice": false,
    "id": 3,
    "lang": "fr",
    "number": "D-2026-00002",
    "related_invoices": [],
    "status": "accepted",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "-50",
        "total": /* Decimal Instance => */ "-10",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "-60",
    "total_without_taxes": /* Decimal Instance => */ "-50",
    "url": "http://loxya.test/estimates/3/pdf",
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "created_at": /* DateTime Instance => */ "2026-05-10 10:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2026-05-10 10:00:00",
    "due_date": null,
    "due_delay": 30,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "has_final_invoice": false,
    "id": 4,
    "lang": "en",
    "number": "D-2026-00003",
    "related_invoices": [],
    "status": "pending",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "0",
        "total": /* Decimal Instance => */ "0",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "0",
    "total_without_taxes": /* Decimal Instance => */ "0",
    "url": "http://loxya.test/estimates/4/pdf",
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "created_at": /* DateTime Instance => */ "2026-01-15 09:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2026-01-15 09:00:00",
    "due_date": null,
    "due_delay": 30,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "has_final_invoice": false,
    "id": 5,
    "lang": "fr",
    "number": "D-2026-00001",
    "related_invoices": [],
    "status": "accepted",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "1000",
        "total": /* Decimal Instance => */ "200",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
      {
        "base": /* Decimal Instance => */ "-998.56",
        "total": /* Decimal Instance => */ "-99.86",
        "type": "S",
        "value": /* Decimal Instance => */ "10",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "101.58",
    "total_without_taxes": /* Decimal Instance => */ "1.44",
    "url": "http://loxya.test/estimates/5/pdf",
  },
]
`;

exports[`Beneficiaries Api invoices() parse the returned data correctly 1`] = `
[
  {
    "buyer": {
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "reference": "0001",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2020-01-30 14:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2020-01-30 14:00:00",
    "due_date": /* Day Instance => */ "2020-02-15",
    "due_delay": null,
    "format": 1,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 1,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": false,
    "is_overdue": true,
    "is_prepayment": false,
    "lang": "fr",
    "number": "2020-00001",
    "order_number": null,
    "parent_estimate": null,
    "parent_invoice": null,
    "status": "partially-paid",
    "total_taxes": [
      {
        "is_rate": true,
        "name": "T.V.A.",
        "total": /* Decimal Instance => */ "60",
        "value": /* Decimal Instance => */ "20",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "604.13",
    "total_without_taxes": /* Decimal Instance => */ "544.13",
    "url": {
      "pdf": "http://loxya.test/invoices/1/pdf",
      "ubl": null,
    },
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2020-06-16 12:30:45",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2020-06-16 12:30:45",
    "due_date": null,
    "due_delay": 15,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 2,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": true,
    "is_overdue": false,
    "is_prepayment": false,
    "lang": "en",
    "number": "2020-00002",
    "order_number": "BC-0001",
    "parent_estimate": null,
    "parent_invoice": null,
    "status": "paid",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "2380.51",
        "total": /* Decimal Instance => */ "476.1",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
      {
        "base": /* Decimal Instance => */ "1026",
        "total": /* Decimal Instance => */ "102.6",
        "type": "S",
        "value": /* Decimal Instance => */ "10",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "3985.21",
    "total_without_taxes": /* Decimal Instance => */ "3406.51",
    "url": {
      "pdf": "http://loxya.test/invoices/2/pdf",
      "ubl": "http://loxya.test/invoices/2/ubl",
    },
  },
  {
    "buyer": {
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "reference": "0001",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2020-09-15 10:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2020-09-15 10:00:00",
    "due_date": /* Day Instance => */ "2020-10-15",
    "due_delay": null,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 3,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": true,
    "is_overdue": true,
    "is_prepayment": false,
    "lang": "fr",
    "number": "2020-00003",
    "order_number": null,
    "parent_estimate": null,
    "parent_invoice": null,
    "status": "pending",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "75",
        "reason": [],
        "type": "K",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "75",
    "total_without_taxes": /* Decimal Instance => */ "75",
    "url": {
      "pdf": "http://loxya.test/invoices/3/pdf",
      "ubl": "http://loxya.test/invoices/3/ubl",
    },
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2021-06-01 10:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2021-06-01 10:00:00",
    "due_date": null,
    "due_delay": 20,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 4,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": true,
    "is_overdue": true,
    "is_prepayment": false,
    "lang": "fr",
    "number": "2021-00001",
    "order_number": "BC-0002",
    "parent_estimate": null,
    "parent_invoice": null,
    "status": "pending",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "5",
        "total": /* Decimal Instance => */ "0",
        "type": "S",
        "value": /* Decimal Instance => */ "0",
      },
      {
        "base": /* Decimal Instance => */ "700",
        "reason": [
          "VATEX-EU-79-C",
          "VATEX-EU-151-1D",
        ],
        "type": "E",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "705",
    "total_without_taxes": /* Decimal Instance => */ "705",
    "url": {
      "pdf": "http://loxya.test/invoices/4/pdf",
      "ubl": "http://loxya.test/invoices/4/ubl",
    },
  },
  {
    "buyer": {
      "company": {
        "additional_street": "Bâtiment D",
        "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
        "administrative_area": null,
        "country": /* Country Instance => */ "FR",
        "id": 1,
        "invoice_identifier": "0225:123456789_LOCATION",
        "is_public_entity": false,
        "legal_name": "Testing, Inc",
        "locality": "Annecy",
        "note": "Anciennement Machin, Inc.",
        "phone": /* Phone Instance => */ "+33123456789",
        "postal_code": "74000",
        "registration_id": "12345678900001",
        "service_code": null,
        "street": "10 avenue de la gare",
        "vat_number": "FR32123456789",
      },
      "email": "tester@loxya.com",
      "first_name": "Jean",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "reference": "0001",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2021-02-15 10:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2021-02-15 10:00:00",
    "due_date": null,
    "due_delay": 0,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 5,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": true,
    "is_overdue": true,
    "is_prepayment": true,
    "lang": "en",
    "number": "2021-00002",
    "order_number": null,
    "parent_estimate": {
      "created_at": /* DateTime Instance => */ "2021-01-30 14:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "has_final_invoice": false,
      "id": 1,
      "number": "D-2021-00001",
      "status": "accepted",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "882.07",
          "total": /* Decimal Instance => */ "176.41",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "4.57",
          "total": /* Decimal Instance => */ "0.25",
          "type": "S",
          "value": /* Decimal Instance => */ "5.5",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "1063.3",
      "total_without_taxes": /* Decimal Instance => */ "886.64",
      "url": "http://loxya.test/estimates/1/pdf",
    },
    "parent_invoice": null,
    "status": "pending",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "82.96",
        "total": /* Decimal Instance => */ "16.59",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
      {
        "base": /* Decimal Instance => */ "0.43",
        "total": /* Decimal Instance => */ "0.02",
        "type": "S",
        "value": /* Decimal Instance => */ "5.5",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "100",
    "total_without_taxes": /* Decimal Instance => */ "83.39",
    "url": {
      "pdf": "http://loxya.test/invoices/5/pdf",
      "ubl": "http://loxya.test/invoices/5/ubl",
    },
  },
  {
    "buyer": {
      "company": null,
      "email": "tester2@loxya.com",
      "first_name": "Roger",
      "full_name": "Roger Rabbit",
      "id": 2,
      "last_name": "Rabbit",
      "reference": "0002",
    },
    "child_invoice": null,
    "created_at": /* DateTime Instance => */ "2021-08-01 10:00:00",
    "currency": /* Currency Instance => */ "EUR",
    "date": /* DateTime Instance => */ "2021-08-01 10:00:00",
    "due_date": null,
    "due_delay": 30,
    "format": 3,
    "global_tax_exemption_code": null,
    "global_tax_exemption_reason": null,
    "global_tax_regime": null,
    "id": 6,
    "is_cancelled": false,
    "is_credit_note": false,
    "is_electronic": false,
    "is_overdue": true,
    "is_prepayment": false,
    "lang": "fr",
    "number": "2021-00003",
    "order_number": null,
    "parent_estimate": null,
    "parent_invoice": null,
    "status": "partially-paid",
    "total_taxes": [
      {
        "base": /* Decimal Instance => */ "900",
        "total": /* Decimal Instance => */ "180",
        "type": "S",
        "value": /* Decimal Instance => */ "20",
      },
    ],
    "total_with_taxes": /* Decimal Instance => */ "1080",
    "total_without_taxes": /* Decimal Instance => */ "900",
    "url": {
      "pdf": "http://loxya.test/invoices/6/pdf",
      "ubl": "http://loxya.test/invoices/6/ubl",
    },
  },
]
`;

exports[`Beneficiaries Api one() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "company": {
    "additional_street": "Bâtiment D",
    "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
    "administrative_area": null,
    "country": /* Country Instance => */ "FR",
    "id": 1,
    "invoice_identifier": "0225:123456789_LOCATION",
    "is_public_entity": false,
    "legal_name": "Testing, Inc",
    "locality": "Annecy",
    "note": "Anciennement Machin, Inc.",
    "phone": /* Phone Instance => */ "+33123456789",
    "postal_code": "74000",
    "registration_id": "12345678900001",
    "service_code": null,
    "street": "10 avenue de la gare",
    "vat_number": "FR32123456789",
  },
  "company_id": 1,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "id": 1,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "note": null,
  "phone": null,
  "postal_code": "12340",
  "reference": "0001",
  "stats": {
    "borrowings": 2,
  },
  "street": "1, somewhere av.",
  "user": {
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "administration",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "user_id": 1,
}
`;

exports[`Beneficiaries Api one() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "id": 2,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Rabbit",
  "locality": null,
  "note": null,
  "phone": null,
  "postal_code": null,
  "reference": "0002",
  "stats": {
    "borrowings": 2,
  },
  "street": null,
  "user": {
    "email": "tester2@loxya.com",
    "first_name": "Roger",
    "full_name": "Roger Rabbit",
    "group": "operation",
    "id": 2,
    "last_name": "Rabbit",
    "phone": null,
    "pseudo": "test2",
  },
  "user_id": 2,
}
`;

exports[`Beneficiaries Api one() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": "Étage 3, Porte 2",
  "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "elise@loxya.fr",
  "first_name": "Élise",
  "full_name": "Élise Faure",
  "id": 3,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Faure",
  "locality": "Wazzaville",
  "note": null,
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "88080",
  "reference": "0003",
  "stats": {
    "borrowings": 1,
  },
  "street": "156 bis, avenue des tests poussés",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api one() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": "47 W 13th St
New York, NY 10011",
  "administrative_area": "NY",
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "US",
  "email": "john@doe.test",
  "first_name": "John",
  "full_name": "John Doe",
  "id": 4,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Doe",
  "locality": "New York",
  "note": null,
  "phone": /* Phone Instance => */ "+17705555765",
  "postal_code": "10011",
  "reference": "0004",
  "stats": {
    "borrowings": 0,
  },
  "street": "47 W 13th St",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api restore() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "company": {
    "additional_street": "Bâtiment D",
    "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
    "administrative_area": null,
    "country": /* Country Instance => */ "FR",
    "id": 1,
    "invoice_identifier": "0225:123456789_LOCATION",
    "is_public_entity": false,
    "legal_name": "Testing, Inc",
    "locality": "Annecy",
    "note": "Anciennement Machin, Inc.",
    "phone": /* Phone Instance => */ "+33123456789",
    "postal_code": "74000",
    "registration_id": "12345678900001",
    "service_code": null,
    "street": "10 avenue de la gare",
    "vat_number": "FR32123456789",
  },
  "company_id": 1,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "id": 1,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "note": null,
  "phone": null,
  "postal_code": "12340",
  "reference": "0001",
  "stats": {
    "borrowings": 2,
  },
  "street": "1, somewhere av.",
  "user": {
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "administration",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "user_id": 1,
}
`;

exports[`Beneficiaries Api restore() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "id": 2,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Rabbit",
  "locality": null,
  "note": null,
  "phone": null,
  "postal_code": null,
  "reference": "0002",
  "stats": {
    "borrowings": 2,
  },
  "street": null,
  "user": {
    "email": "tester2@loxya.com",
    "first_name": "Roger",
    "full_name": "Roger Rabbit",
    "group": "operation",
    "id": 2,
    "last_name": "Rabbit",
    "phone": null,
    "pseudo": "test2",
  },
  "user_id": 2,
}
`;

exports[`Beneficiaries Api restore() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": "Étage 3, Porte 2",
  "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "elise@loxya.fr",
  "first_name": "Élise",
  "full_name": "Élise Faure",
  "id": 3,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Faure",
  "locality": "Wazzaville",
  "note": null,
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "88080",
  "reference": "0003",
  "stats": {
    "borrowings": 1,
  },
  "street": "156 bis, avenue des tests poussés",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api restore() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": "47 W 13th St
New York, NY 10011",
  "administrative_area": "NY",
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "US",
  "email": "john@doe.test",
  "first_name": "John",
  "full_name": "John Doe",
  "id": 4,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Doe",
  "locality": "New York",
  "note": null,
  "phone": /* Phone Instance => */ "+17705555765",
  "postal_code": "10011",
  "reference": "0004",
  "stats": {
    "borrowings": 0,
  },
  "street": "47 W 13th St",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api update() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "company": {
    "additional_street": "Bâtiment D",
    "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
    "administrative_area": null,
    "country": /* Country Instance => */ "FR",
    "id": 1,
    "invoice_identifier": "0225:123456789_LOCATION",
    "is_public_entity": false,
    "legal_name": "Testing, Inc",
    "locality": "Annecy",
    "note": "Anciennement Machin, Inc.",
    "phone": /* Phone Instance => */ "+33123456789",
    "postal_code": "74000",
    "registration_id": "12345678900001",
    "service_code": null,
    "street": "10 avenue de la gare",
    "vat_number": "FR32123456789",
  },
  "company_id": 1,
  "country": /* Country Instance => */ "FR",
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "id": 1,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "note": null,
  "phone": null,
  "postal_code": "12340",
  "reference": "0001",
  "stats": {
    "borrowings": 2,
  },
  "street": "1, somewhere av.",
  "user": {
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "administration",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "user_id": 1,
}
`;

exports[`Beneficiaries Api update() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "id": 2,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": "en",
  "last_name": "Rabbit",
  "locality": null,
  "note": null,
  "phone": null,
  "postal_code": null,
  "reference": "0002",
  "stats": {
    "borrowings": 2,
  },
  "street": null,
  "user": {
    "email": "tester2@loxya.com",
    "first_name": "Roger",
    "full_name": "Roger Rabbit",
    "group": "operation",
    "id": 2,
    "last_name": "Rabbit",
    "phone": null,
    "pseudo": "test2",
  },
  "user_id": 2,
}
`;

exports[`Beneficiaries Api update() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": "Étage 3, Porte 2",
  "address": "156 bis, avenue des tests poussés
Étage 3, Porte 2
88080 Wazzaville",
  "administrative_area": null,
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "FR",
  "email": "elise@loxya.fr",
  "first_name": "Élise",
  "full_name": "Élise Faure",
  "id": 3,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Faure",
  "locality": "Wazzaville",
  "note": null,
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "88080",
  "reference": "0003",
  "stats": {
    "borrowings": 1,
  },
  "street": "156 bis, avenue des tests poussés",
  "user": null,
  "user_id": null,
}
`;

exports[`Beneficiaries Api update() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": "47 W 13th St
New York, NY 10011",
  "administrative_area": "NY",
  "company": null,
  "company_id": null,
  "country": /* Country Instance => */ "US",
  "email": "john@doe.test",
  "first_name": "John",
  "full_name": "John Doe",
  "id": 4,
  "is_deleted": false,
  "is_invoiceable": true,
  "language": null,
  "last_name": "Doe",
  "locality": "New York",
  "note": null,
  "phone": /* Phone Instance => */ "+17705555765",
  "postal_code": "10011",
  "reference": "0004",
  "stats": {
    "borrowings": 0,
  },
  "street": "47 W 13th St",
  "user": null,
  "user_id": null,
}
`;
